--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <a href="#">WebStudio</a>
       <nav>
-        <a href="#">Студия</a>
-        <a href="#">Портфолио</a>
+        <a href="/">Студия</a>
+        <a href="/portfolio.html">Портфолио</a>
         <a href="#">Контакты</a>
       </nav>
       <ul>
@@ -30,23 +30,31 @@
           <!--<h2>Наши приимущества</h2>-->
           <li>
             <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
             </p>
           </li>
           <li>
             <h3>Планирование</h3>
             <p>
-              Равным образом консультация с широким активом в значительной степени обуславливает.
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
             </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
@@ -54,31 +62,62 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./images/img1.jpg" alt="hands" width="370" height="294" /></li>
-          <li><img src="./images/img2.jpg" alt="phone" width="370" height="294" /></li>
-          <li><img src="./images/img3.jpg" alt="desing" width="370" height="294" /></li>
+          <li>
+            <img src="./images/img1.jpg" alt="hands" width="370" height="294" />
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="phone" width="370" height="294" />
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="desing"
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/imgproductdesinger.jpg " alt="man" width="270" height="260" />
+            <img
+              src="./images/imgproductdesinger.jpg "
+              alt="man"
+              width="270"
+              height="260"
+            />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/imgfrontend.jpg" alt="woman" width="270" height="260" />
+            <img
+              src="./images/imgfrontend.jpg"
+              alt="woman"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/imgmarketing.jpg" alt="man" width="270" height="260" />
+            <img
+              src="./images/imgmarketing.jpg"
+              alt="man"
+              width="270"
+              height="260"
+            />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/imguidesinger.jpg" alt="man" width="270" height="260" />
+            <img
+              src="./images/imguidesinger.jpg"
+              alt="man"
+              width="270"
+              height="260"
+            />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -90,7 +129,9 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/xvdYMsPoaaACo8cn6">г. Киев, пр-т Леси Украинки, 26</a>
+            <a href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
           </li>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380991111111">+380991111111</a></li>
