--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,16 @@
     <header>
       <a class="logo" href="#">WebStudio</a>
       <nav>
-        <a class="navstudio" href="studio.html">Студия</a>
-        <a class="navportfolio" href="portfolio.html">Портфолио</a>
+        <a class="navstudio" href="/">Студия</a>
+        <a class="navportfolio" href="/portfolio.html">Портфолио</a>
         <a class="navcontacts" href="#">Контакты</a>
       </nav>
       <ul>
-        <li><a class="adress" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li>
+          <a class="adress" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
         <li><a class="adress" href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
@@ -50,14 +54,26 @@
         </li>
         <li>
           <a href="#">
-            <img class="container" src="./images/imgmen.jpg" alt="men" width="370" height="294" />
+            <img
+              class="container"
+              src="./images/imgmen.jpg"
+              alt="men"
+              width="370"
+              height="294"
+            />
             <h3 class="titles">Постер New Orlean vs Golden Star</h3>
             <p class="navnames">Дизайн</p>
           </a>
         </li>
         <li>
           <a href="#">
-            <img class="container" src="./images/imglogo.jpg" alt="logo" width="370" height="294" />
+            <img
+              class="container"
+              src="./images/imglogo.jpg"
+              alt="logo"
+              width="370"
+              height="294"
+            />
             <h3 class="titles">Ресторан Seafood</h3>
             <p class="navnames">Приложение</p>
           </a>
@@ -151,7 +167,11 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a class="adress" href="mailto:info@example.com">info@example.com</a></li>
+          <li>
+            <a class="adress" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
           <li><a class="adress" href="tel:+380991111111">+380991111111</a></li>
         </ul>
       </address>
