--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
     <header>
       <a class="logo" href="#">WebStudio</a>
       <nav>
-        <a class="navstudio" href="/">Студия</a>
-        <a class="navportfolio" href="/portfolio.html">Портфолио</a>
+        <a class="navstudio" href="index.html">Студия</a>
+        <a class="navportfolio" href="portfolio.html">Портфолио</a>
         <a class="navcontacts" href="#">Контакты</a>
       </nav>
       <ul>
