--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,17 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="#">WebStudio</a>
+      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
       <nav>
-        <a class="navstudio" href="index.html">Студия</a>
-        <a class="navportfolio" href="portfolio.html">Портфолио</a>
-        <a class="navcontacts" href="#">Контакты</a>
+        <ul class="list">
+          <li>
+            <a class="navigation" href="index.html">Студия</a>
+          </li>
+          <li><a class="navigation" href="portfolio.html">Портфолио</a></li>
+          <li><a class="navigation" href="#">Контакты</a></li>
+        </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
           <a class="adress" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -31,44 +35,46 @@
       </ul>
     </header>
     <main>
-      <ul>
-        <li><button class="button" type="button">Все</button></li>
-        <li><button class="button" type="button">Веб-сайты</button></li>
-        <li><button class="button" type="button">Приложения</button></li>
-        <li><button class="button" type="button">Дизайн</button></li>
-        <li><button class="button" type="button">Маркетинг</button></li>
-      </ul>
-      <ul>
+      <ul class="buttons">
         <li>
-          <a href="#">
+          <button class="button" type="button">Все</button>
+        </li>
+        <li>
+          <button class="button" type="button">Веб-сайты</button>
+        </li>
+        <li>
+          <button class="button" type="button">Приложения</button>
+        </li>
+        <li>
+          <button class="button" type="button">Дизайн</button>
+        </li>
+        <li>
+          <button class="button" type="button">Маркетинг</button>
+        </li>
+      </ul>
+      <ul class="links">
+        <li>
+          <a href="#" class="link">
             <img
-              class="container"
               src="./images/imgmacbook.jpg"
               alt="macbook"
               width="370"
               height="294"
             />
-            <h3>Технокряк</h3>
+            <h3 class="titles">Технокряк</h3>
             <p class="navnames">Веб-сайт</p>
           </a>
         </li>
         <li>
-          <a href="#">
-            <img
-              class="container"
-              src="./images/imgmen.jpg"
-              alt="men"
-              width="370"
-              height="294"
-            />
+          <a href="#" class="link">
+            <img src="./images/imgmen.jpg" alt="men" width="370" height="294" />
             <h3 class="titles">Постер New Orlean vs Golden Star</h3>
             <p class="navnames">Дизайн</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="link">
             <img
-              class="container"
               src="./images/imglogo.jpg"
               alt="logo"
               width="370"
@@ -79,9 +85,8 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="link">
             <img
-              class="container"
               src="./images/imgheadphones.jpg"
               alt="headphones"
               width="370"
@@ -92,9 +97,8 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="# " class="link">
             <img
-              class="container"
               src="./images/imgboxes.jpg"
               alt="boxes"
               width="370"
@@ -105,9 +109,8 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="link">
             <img
-              class="container"
               src="./images/imgscreen.jpg"
               alt="screen"
               width="370"
@@ -118,9 +121,8 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="link">
             <img
-              class="container"
               src="./images/imgmagazine.jpg"
               alt="magazine"
               width="370"
@@ -131,9 +133,8 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="link">
             <img
-              class="container"
               src="./images/imglabel.jpg"
               alt="label"
               width="370"
@@ -144,9 +145,8 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="link">
             <img
-              class="container"
               src="./images/imgmacscreen.jpg"
               alt="screen"
               width="370"
@@ -159,9 +159,9 @@
       </ul>
     </main>
     <footer class="footer">
-      <a class="logo" href="#">WebStudio</a>
+      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a class="navstreet" href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
               >г. Киев, пр-т Леси Украинки, 26</a
