--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Технокряк</h3>
+            <h3 class="titlesportfolio">Технокряк</h3>
             <p class="navnames">Веб-сайт</p>
           </a>
         </li>
@@ -80,7 +80,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Ресторан Seafood</h3>
+            <h3 class="titlesportfolio">Ресторан Seafood</h3>
             <p class="navnames">Приложение</p>
           </a>
         </li>
@@ -92,7 +92,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Проект Prime</h3>
+            <h3 class="titlesportfolio">Проект Prime</h3>
             <p class="navnames">Маркетинг</p>
           </a>
         </li>
@@ -104,7 +104,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Проект Boxes</h3>
+            <h3 class="titlesportfolio">Проект Boxes</h3>
             <p class="navnames">Приложение</p>
           </a>
         </li>
@@ -116,7 +116,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Inspiration has no Borders</h3>
+            <h3 class="titlesportfolio">Inspiration has no Borders</h3>
             <p class="navnames">Веб-сайт</p>
           </a>
         </li>
@@ -128,7 +128,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Издание Limited Edition</h3>
+            <h3 class="titlesportfolio">Издание Limited Edition</h3>
             <p class="navnames">Дизайн</p>
           </a>
         </li>
@@ -140,7 +140,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Проект LAB</h3>
+            <h3 class="titlesportfolio">Проект LAB</h3>
             <p class="navnames">Маркетинг</p>
           </a>
         </li>
@@ -152,7 +152,7 @@
               width="370"
               height="294"
             />
-            <h3 class="titles">Growing Business</h3>
+            <h3 class="titlesportfolio">Growing Business</h3>
             <p class="navnames">Приложение</p>
           </a>
         </li>
