--- a/index.html
+++ b/index.html
@@ -4,54 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <a href="#">WebStudio</a>
+      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
       <nav>
-        <a href="index.html">Студия</a>
-        <a href="portfolio.html">Портфолио</a>
-        <a href="#">Контакты</a>
+        <ul class="list">
+          <li>
+            <a class="navigation" href="index.html">Студия</a>
+          </li>
+          <li><a class="navigation" href="portfolio.html">Портфолио</a></li>
+          <li><a class="navigation" href="#">Контакты</a></li>
+        </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+      <ul class="list">
+        <li>
+          <a class="adress" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="adress" href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения<br />для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="section">
+        <h1 class="headtitle">Эффективные решения<br />для вашего бизнеса</h1>
+        <button class="button" type="button">Заказать услугу</button>
       </section>
 
       <section>
         <ul>
           <!--<h2>Наши приимущества</h2>-->
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -60,15 +75,18 @@
       </section>
 
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="worktitle">Чем мы занимаемся</h2>
         <ul>
           <li>
+            <a href="#" class="link"></a>
             <img src="./images/img1.jpg" alt="hands" width="370" height="294" />
           </li>
           <li>
+            <a href="#" class="link"></a>
             <img src="./images/img2.jpg" alt="phone" width="370" height="294" />
           </li>
           <li>
+            <a href="#" class="link"></a>
             <img
               src="./images/img3.jpg"
               alt="desing"
@@ -79,62 +97,70 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="worktitle">Наша команда</h2>
         <ul>
           <li>
+            <a href="#" class="link"></a>
             <img
               src="./images/imgproductdesinger.jpg "
               alt="man"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="nametitle">Игорь Демьяненко</h3>
+            <p class="position">Product Designer</p>
           </li>
           <li>
+            <a href="#" class="link"></a>
             <img
               src="./images/imgfrontend.jpg"
               alt="woman"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="nametitle">Ольга Репина</h3>
+            <p class="position">Frontend Developer</p>
           </li>
           <li>
+            <a href="#" class="link"></a>
             <img
               src="./images/imgmarketing.jpg"
               alt="man"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="nametitle">Николай Тарасов</h3>
+            <p class="position">Marketing</p>
           </li>
           <li>
+            <a href="#" class="link"></a>
             <img
               src="./images/imguidesinger.jpg"
               alt="man"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="nametitle">Михаил Ермаков</h3>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#">WebStudio</a>
+    <footer class="footer">
+      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
+            <a class="navstreet" href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+380991111111</a></li>
+          <li>
+            <a class="adress" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li><a class="adress" href="tel:+380991111111">+380991111111</a></li>
         </ul>
       </address>
     </footer>
