--- a/index.html
+++ b/index.html
@@ -15,58 +15,60 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
+      <a class="logo" href="#">Web<span class="logo-text">Studio</span></a>
       <nav>
         <ul class="list">
           <li>
-            <a class="navigation" href="index.html">Студия</a>
+            <a class="nav-link" href="index.html">Студия</a>
           </li>
-          <li><a class="navigation" href="portfolio.html">Портфолио</a></li>
-          <li><a class="navigation" href="#">Контакты</a></li>
+          <li><a class="nav-link" href="portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
         <li>
-          <a class="adress" href="mailto:info@devstudio.com"
+          <a class="list-adress" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li><a class="adress" href="tel:+380961111111">+380961111111</a></li>
+        <li>
+          <a class="list-adress" href="tel:+380961111111">+380961111111</a>
+        </li>
       </ul>
     </header>
     <main>
-      <section class="section">
-        <h1 class="headtitle">Эффективные решения<br />для вашего бизнеса</h1>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
         <button class="button" type="button">Заказать услугу</button>
       </section>
 
       <section>
-        <ul>
+        <ul class="about">
           <!--<h2>Наши приимущества</h2>-->
           <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">
+            <h3 class="about-title">Внимание к деталям</h3>
+            <p class="about-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">
+            <h3 class="about-title">Пунктуальность</h3>
+            <p class="about-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="title">Планирование</h3>
-            <p class="text">
+            <h3 class="about-title">Планирование</h3>
+            <p class="about-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="text">
+            <h3 class="about-title">Современные технологии</h3>
+            <p class="about-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -76,7 +78,7 @@
 
       <section>
         <h2 class="worktitle">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="work">
           <li>
             <a href="#" class="link"></a>
             <img src="./images/img1.jpg" alt="hands" width="370" height="294" />
@@ -98,7 +100,7 @@
       </section>
       <section>
         <h2 class="worktitle">Наша команда</h2>
-        <ul>
+        <ul class="team">
           <li>
             <a href="#" class="link"></a>
             <img
@@ -107,8 +109,8 @@
               width="270"
               height="260"
             />
-            <h3 class="nametitle">Игорь Демьяненко</h3>
-            <p class="position">Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-position">Product Designer</p>
           </li>
           <li>
             <a href="#" class="link"></a>
@@ -118,8 +120,8 @@
               width="270"
               height="260"
             />
-            <h3 class="nametitle">Ольга Репина</h3>
-            <p class="position">Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-position">Frontend Developer</p>
           </li>
           <li>
             <a href="#" class="link"></a>
@@ -129,8 +131,8 @@
               width="270"
               height="260"
             />
-            <h3 class="nametitle">Николай Тарасов</h3>
-            <p class="position">Marketing</p>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-position">Marketing</p>
           </li>
           <li>
             <a href="#" class="link"></a>
@@ -140,27 +142,29 @@
               width="270"
               height="260"
             />
-            <h3 class="nametitle">Михаил Ермаков</h3>
-            <p class="position">UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
+      <a class="logo" href="#">Web<span class="logo-white">Studio</span></a>
       <address>
         <ul class="list">
           <li>
-            <a class="navstreet" href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
+            <a class="list-street" href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a class="adress" href="mailto:info@example.com"
+            <a class="list-adress" href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
-          <li><a class="adress" href="tel:+380991111111">+380991111111</a></li>
+          <li>
+            <a class="list-adress" href="tel:+380991111111">+380991111111</a>
+          </li>
         </ul>
       </address>
     </footer>
