--- a/portfolio.html
+++ b/portfolio.html
@@ -15,41 +15,43 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
+      <a class="logo" href="#">Web<span class="logo-text">Studio</span></a>
       <nav>
         <ul class="list">
           <li>
-            <a class="navigation" href="index.html">Студия</a>
+            <a class="nav-link" href="index.html">Студия</a>
           </li>
-          <li><a class="navigation" href="portfolio.html">Портфолио</a></li>
-          <li><a class="navigation" href="#">Контакты</a></li>
+          <li><a class="nav-link" href="portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
         <li>
-          <a class="adress" href="mailto:info@devstudio.com"
+          <a class="list-adress" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li><a class="adress" href="tel:+380961111111">+380961111111</a></li>
+        <li>
+          <a class="list-adress" href="tel:+380961111111">+380961111111</a>
+        </li>
       </ul>
     </header>
     <main>
       <ul class="buttons">
         <li>
-          <button class="button" type="button">Все</button>
+          <button class="button-filter" type="button">Все</button>
         </li>
         <li>
-          <button class="button" type="button">Веб-сайты</button>
+          <button class="button-filter" type="button">Веб-сайты</button>
         </li>
         <li>
-          <button class="button" type="button">Приложения</button>
+          <button class="button-filter" type="button">Приложения</button>
         </li>
         <li>
-          <button class="button" type="button">Дизайн</button>
+          <button class="button-filter" type="button">Дизайн</button>
         </li>
         <li>
-          <button class="button" type="button">Маркетинг</button>
+          <button class="button-filter" type="button">Маркетинг</button>
         </li>
       </ul>
       <ul class="links">
@@ -61,15 +63,15 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Технокряк</h3>
-            <p class="navnames">Веб-сайт</p>
+            <h3 class="links-title">Технокряк</h3>
+            <p class="links-text">Веб-сайт</p>
           </a>
         </li>
         <li>
           <a href="#" class="link">
             <img src="./images/imgmen.jpg" alt="men" width="370" height="294" />
-            <h3 class="titles">Постер New Orlean vs Golden Star</h3>
-            <p class="navnames">Дизайн</p>
+            <h3 class="links-title">Постер New Orlean vs Golden Star</h3>
+            <p class="links-text">Дизайн</p>
           </a>
         </li>
         <li>
@@ -80,8 +82,8 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Ресторан Seafood</h3>
-            <p class="navnames">Приложение</p>
+            <h3 class="links-title">Ресторан Seafood</h3>
+            <p class="links-text">Приложение</p>
           </a>
         </li>
         <li>
@@ -92,8 +94,8 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Проект Prime</h3>
-            <p class="navnames">Маркетинг</p>
+            <h3 class="links-title">Проект Prime</h3>
+            <p class="links-text">Маркетинг</p>
           </a>
         </li>
         <li>
@@ -104,8 +106,8 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Проект Boxes</h3>
-            <p class="navnames">Приложение</p>
+            <h3 class="links-title">Проект Boxes</h3>
+            <p class="links-text">Приложение</p>
           </a>
         </li>
         <li>
@@ -116,8 +118,8 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Inspiration has no Borders</h3>
-            <p class="navnames">Веб-сайт</p>
+            <h3 class="links-title">Inspiration has no Borders</h3>
+            <p class="links-text">Веб-сайт</p>
           </a>
         </li>
         <li>
@@ -128,8 +130,8 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Издание Limited Edition</h3>
-            <p class="navnames">Дизайн</p>
+            <h3 class="links-title">Издание Limited Edition</h3>
+            <p class="links-text">Дизайн</p>
           </a>
         </li>
         <li>
@@ -140,8 +142,8 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Проект LAB</h3>
-            <p class="navnames">Маркетинг</p>
+            <h3 class="links-title">Проект LAB</h3>
+            <p class="links-text">Маркетинг</p>
           </a>
         </li>
         <li>
@@ -152,27 +154,29 @@
               width="370"
               height="294"
             />
-            <h3 class="titlesportfolio">Growing Business</h3>
-            <p class="navnames">Приложение</p>
+            <h3 class="links-title">Growing Business</h3>
+            <p class="links-text">Приложение</p>
           </a>
         </li>
       </ul>
     </main>
     <footer class="footer">
-      <a class="logo" href="#">Web<span class="colortext">Studio</span></a>
+      <a class="logo" href="#">Web<span class="logo-white">Studio</span></a>
       <address>
         <ul class="list">
           <li>
-            <a class="navstreet" href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
+            <a class="list-street" href="https://goo.gl/maps/xvdYMsPoaaACo8cn6"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a class="adress" href="mailto:info@example.com"
+            <a class="list-adress" href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
-          <li><a class="adress" href="tel:+380991111111">+380991111111</a></li>
+          <li>
+            <a class="list-adress" href="tel:+380991111111">+380991111111</a>
+          </li>
         </ul>
       </address>
     </footer>
